# GraphicsFramework

./: .gitignore  CMakeLists.txt  README.md
asset/testModels/cube/: basic_cube.blend  basic_cube.mtl  basic_sphere.blend  basic_sphere.mtl
shader/: fragment.frag  fragmentGlider.frag  vertex.vert  vertexGlider.vert
source/components/: IComponent.hpp  MapComponent.cpp  MapComponent.hpp
source/doc/: mainpage.hpp
source/entity/: Entity.cpp  Entity.hpp
source/environment/: Camera.cpp  Camera.hpp  LightSource.cpp  LightSource.hpp
source/game/: Glider.cpp  Glider.hpp  Map.cpp  Map.hpp  Object.cpp  Object.hpp
source/helpers/: global_function.cpp
source/modeler/: Mesh.cpp  Model.cpp  Model.hpp  Texture.hpp  struct.hpp
source/src/: main.cpp
